crates/turborepo-lib/src/turbo_json/snapshots/turborepo_lib__turbo_json__tests__dependents.snap
---
source: crates/turborepo-lib/src/turbo_json/mod.rs
expression: raw_task_definition
---
{
  "tags": null,
  "dependencies": null,
  "dependents": {
    "allow": [
      "my-package"
    ],
    "deny": [
      "my-other-package"
    ]
  }
}
