crates/turborepo-lib/src/turbo_json/snapshots/turborepo_lib__turbo_json__tests__empty_tags.snap
---
source: crates/turborepo-lib/src/turbo_json/mod.rs
expression: raw_task_definition
---
{
  "tags": {}
}
