crates/turborepo-lib/src/turbo_json/snapshots/turborepo_lib__turbo_json__tests__implicit_dependencies.snap
---
source: crates/turborepo-lib/src/turbo_json/mod.rs
expression: raw_boundaries_config
---
{
  "tags": null,
  "implicit_dependencies": [
    "my-package"
  ]
}
