crates/turborepo-lib/src/turbo_json/snapshots/turborepo_lib__turbo_json__tests__implicit_dependencies_and_tags.snap
---
source: crates/turborepo-lib/src/turbo_json/mod.rs
expression: raw_boundaries_config
---
{
  "tags": {
    "my-tag": {
      "dependencies": null,
      "dependents": {
        "allow": [
          "my-package"
        ],
        "deny": [
          "my-other-package"
        ]
      }
    }
  },
  "implicit_dependencies": [
    "my-package"
  ]
}
