crates/turborepo-lib/src/turbo_json/snapshots/turborepo_lib__turbo_json__tests__package_rule.snap
---
source: crates/turborepo-lib/src/turbo_json/mod.rs
expression: raw_boundaries_config
---
{
  "dependencies": {
    "allow": [
      "my-package"
    ],
    "deny": null
  }
}
