crates/turborepo-lib/src/turbo_json/snapshots/turborepo_lib__turbo_json__tests__tags_and_dependencies.snap
---
source: crates/turborepo-lib/src/turbo_json/mod.rs
expression: raw_task_definition
---
{
  "tags": {
    "my-tag": {
      "dependencies": {
        "allow": [
          "my-package"
        ],
        "deny": null
      },
      "dependents": null
    }
  }
}
