crates/turborepo-lib/src/turbo_json/snapshots/turborepo_lib__turbo_json__tests__tags_and_dependencies_2.snap
---
source: crates/turborepo-lib/src/turbo_json/mod.rs
expression: raw_boundaries_config
---
{
  "tags": {
    "my-tag": {
      "dependencies": {
        "allow": [
          "my-package"
        ],
        "deny": [
          "my-other-package"
        ]
      },
      "dependents": null
    }
  },
  "implicit_dependencies": null
}
