crates/turborepo-lib/src/turbo_json/snapshots/turborepo_lib__turbo_json__tests__tags_and_dependents.snap
---
source: crates/turborepo-lib/src/turbo_json/mod.rs
expression: raw_task_definition
---
{
  "tags": {
    "my-tag": {
      "dependencies": null,
      "dependents": {
        "allow": [
          "my-package"
        ],
        "deny": [
          "my-other-package"
        ]
      }
    }
  }
}
