crates/turborepo-lib/src/turbo_json/snapshots/turborepo_lib__turbo_json__tests__two_tags.snap
---
source: crates/turborepo-lib/src/turbo_json/mod.rs
expression: json.tags
---
[
  "my-tag",
  "my-other-tag"
]
